# panda-battle

./: BREEDING_README.md  IMPLEMENTATION_CHECKLIST.md  README.md  TOKENOMICS_IMPLEMENTATION.md  codama.mjs  eslint.config.mjs  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
app/: globals.css  layout.tsx  manifest.ts  page.tsx
components/: background-music-player.tsx  game-layout.tsx  header.tsx  navigation.tsx  settings-dropdown.tsx  sound-initializer.tsx  splash-screen.tsx  tab-content.tsx  tab-navigation.tsx  wallet-connection.tsx
configs/: constants.ts  env.ts
docs/: BATTLE_ENGINE_IMPLEMENTATION.md  COMPONENT_INVENTORY.md  IMPLEMENTATION_SUMMARY.md  MOCK_DATA.md  (+5 more)
program/programs/panda-battle/: Cargo.toml  GAME_DESIGN.md  PHASE5_EXAMPLES.md  PHASE5_QUICKREF.md  PHASE5_SUMMARY.md  PHASE5_USAGE.md  TODO.md
program/programs/panda-battle/src/: constants.rs  error.rs  errors.rs  events.rs  lib.rs  state.rs  utils.rs
program/programs/panda-battle/src/instructions/: admin.rs  complete_breeding.rs  crank.rs  enqueue.rs  forge_panda.rs  init_queue.rs  initialize_player.rs  mod.rs  player.rs  record_activity.rs  resolve_battle.rs  start_battle.rs  start_breeding.rs  submit_turn.rs  update_progress.rs
program/programs/panda-battle/src/instructions/tokenomics/: claim_rewards.rs  distribute_bamboo_rewards.rs  initialize_treasury.rs  mod.rs  spend_bamboo_for_action.rs
program/programs/panda-battle/src/state/: battle.rs  breeding.rs  mod.rs  panda.rs  player_profile.rs  player_progress.rs  queue.rs  record.rs  reward_pool.rs  treasury.rs
(+166 files in other folders)
